--- a/dannie.html
+++ b/dannie.html
@@ -4,64 +4,64 @@
 <body bgcolor=#ccffcc>
 		
 
-<font size=5>
+<font size=5 face="Verdana">
 <i>
-<b><font color=#ff0011><p align=center><b>ПЕРСОНАЛЬНЫЕ ДАННЫЕ:</b></p></font>
-<a href="main.html" target="майн" >назад</a></i>
+<b><font color=#ff0011><p align=center><b>РџР•Р РЎРћРќРђР›Р¬РќР«Р• Р”РђРќРќР«Р•:</b></p></font>
+<a href="main.html" target="РјР°Р№РЅ" >РЅР°Р·Р°Рґ</a></i>
 <br>
 <p align=justify>
 
-Персональные данные – все данные о человеке, своего рода «паспорт его
-личности». Их следует тщательно беречь и не раскрывать в Интернете без
-необходимости. В противном случае это может привести к очень неприятным
-последствиям: нежелательным звонкам, спаму, краже денег и документов,
-аккаунтов, различным мошенническим действиям. Безопасность – это наша
-непререкаемая ценность для детей и взрослых!
+РџРµСЂСЃРѕРЅР°Р»СЊРЅС‹Рµ РґР°РЅРЅС‹Рµ вЂ“ РІСЃРµ РґР°РЅРЅС‹Рµ Рѕ С‡РµР»РѕРІРµРєРµ, СЃРІРѕРµРіРѕ СЂРѕРґР° В«РїР°СЃРїРѕСЂС‚ РµРіРѕ
+Р»РёС‡РЅРѕСЃС‚РёВ». РС… СЃР»РµРґСѓРµС‚ С‚С‰Р°С‚РµР»СЊРЅРѕ Р±РµСЂРµС‡СЊ Рё РЅРµ СЂР°СЃРєСЂС‹РІР°С‚СЊ РІ РРЅС‚РµСЂРЅРµС‚Рµ Р±РµР·
+РЅРµРѕР±С…РѕРґРёРјРѕСЃС‚Рё. Р’ РїСЂРѕС‚РёРІРЅРѕРј СЃР»СѓС‡Р°Рµ СЌС‚Рѕ РјРѕР¶РµС‚ РїСЂРёРІРµСЃС‚Рё Рє РѕС‡РµРЅСЊ РЅРµРїСЂРёСЏС‚РЅС‹Рј
+РїРѕСЃР»РµРґСЃС‚РІРёСЏРј: РЅРµР¶РµР»Р°С‚РµР»СЊРЅС‹Рј Р·РІРѕРЅРєР°Рј, СЃРїР°РјСѓ, РєСЂР°Р¶Рµ РґРµРЅРµРі Рё РґРѕРєСѓРјРµРЅС‚РѕРІ,
+Р°РєРєР°СѓРЅС‚РѕРІ, СЂР°Р·Р»РёС‡РЅС‹Рј РјРѕС€РµРЅРЅРёС‡РµСЃРєРёРј РґРµР№СЃС‚РІРёСЏРј. Р‘РµР·РѕРїР°СЃРЅРѕСЃС‚СЊ вЂ“ СЌС‚Рѕ РЅР°С€Р°
+РЅРµРїСЂРµСЂРµРєР°РµРјР°СЏ С†РµРЅРЅРѕСЃС‚СЊ РґР»СЏ РґРµС‚РµР№ Рё РІР·СЂРѕСЃР»С‹С…!
 </b>
 <br>
 
-<b><i>Что относится к персональным данным?</b></i>
+<b><i>Р§С‚Рѕ РѕС‚РЅРѕСЃРёС‚СЃСЏ Рє РїРµСЂСЃРѕРЅР°Р»СЊРЅС‹Рј РґР°РЅРЅС‹Рј?</b></i>
 <br>
-1. Фамилия, имя, отчество;
+1. Р¤Р°РјРёР»РёСЏ, РёРјСЏ, РѕС‚С‡РµСЃС‚РІРѕ;
 <br>
-2. Номера и реквизиты всех документов (паспорт, СНИЛС, ИНН, свидетельство о рождении,
-аттестат об образовании, медицинский полис и т.п.);
+2. РќРѕРјРµСЂР° Рё СЂРµРєРІРёР·РёС‚С‹ РІСЃРµС… РґРѕРєСѓРјРµРЅС‚РѕРІ (РїР°СЃРїРѕСЂС‚, РЎРќРР›РЎ, РРќРќ, СЃРІРёРґРµС‚РµР»СЊСЃС‚РІРѕ Рѕ СЂРѕР¶РґРµРЅРёРё,
+Р°С‚С‚РµСЃС‚Р°С‚ РѕР± РѕР±СЂР°Р·РѕРІР°РЅРёРё, РјРµРґРёС†РёРЅСЃРєРёР№ РїРѕР»РёСЃ Рё С‚.Рї.);
 <br>
-3. Банковские данные (номер счета, карты, пин-код, CVV-код и т.п.);
+3. Р‘Р°РЅРєРѕРІСЃРєРёРµ РґР°РЅРЅС‹Рµ (РЅРѕРјРµСЂ СЃС‡РµС‚Р°, РєР°СЂС‚С‹, РїРёРЅ-РєРѕРґ, CVV-РєРѕРґ Рё С‚.Рї.);
 <br>
-4. Ваша контактная информация (номера телефонов, адреса электронной почты, адреса
-жительства, работы или учебы);
+4. Р’Р°С€Р° РєРѕРЅС‚Р°РєС‚РЅР°СЏ РёРЅС„РѕСЂРјР°С†РёСЏ (РЅРѕРјРµСЂР° С‚РµР»РµС„РѕРЅРѕРІ, Р°РґСЂРµСЃР° СЌР»РµРєС‚СЂРѕРЅРЅРѕР№ РїРѕС‡С‚С‹, Р°РґСЂРµСЃР°
+Р¶РёС‚РµР»СЊСЃС‚РІР°, СЂР°Р±РѕС‚С‹ РёР»Рё СѓС‡РµР±С‹);
 <br>
-5. Фотографии и видеозаписи с вашим изображением;
+5. Р¤РѕС‚РѕРіСЂР°С„РёРё Рё РІРёРґРµРѕР·Р°РїРёСЃРё СЃ РІР°С€РёРј РёР·РѕР±СЂР°Р¶РµРЅРёРµРј;
 <br>
-6. Данные о ваших родственниках;
+6. Р”Р°РЅРЅС‹Рµ Рѕ РІР°С€РёС… СЂРѕРґСЃС‚РІРµРЅРЅРёРєР°С…;
 <br>
-7. Ваши логины и пароли.
+7. Р’Р°С€Рё Р»РѕРіРёРЅС‹ Рё РїР°СЂРѕР»Рё.
 <br>
 
 
 <b><i>
-Десять способов защитить персональные данные</b></i>
+Р”РµСЃСЏС‚СЊ СЃРїРѕСЃРѕР±РѕРІ Р·Р°С‰РёС‚РёС‚СЊ РїРµСЂСЃРѕРЅР°Р»СЊРЅС‹Рµ РґР°РЅРЅС‹Рµ</b></i>
 <br>
-1.Меняйте пароли и избегайте слабых комбинаций. Это стандартная рекомендация, ведь подбор пароля — несложная операция, с которой справляются даже неопытные хакеры. Регулярно меняйте пароли от своих аккаунтов в соцсетях и почтовых ящиков, старайтесь не использовать один и тот же пароль для разных сервисов. При создании пароля важно использовать сильные комбинации. Так, подобрать пароль SemenPetrov_96 несложно. А вот son_sVoe9o.otza выглядит более надежным — в нем нет имени или года рождения владельца, зато используются слова на двух языках, а цифра и заглавная буква стоят в случайных местах.
+1.РњРµРЅСЏР№С‚Рµ РїР°СЂРѕР»Рё Рё РёР·Р±РµРіР°Р№С‚Рµ СЃР»Р°Р±С‹С… РєРѕРјР±РёРЅР°С†РёР№. Р­С‚Рѕ СЃС‚Р°РЅРґР°СЂС‚РЅР°СЏ СЂРµРєРѕРјРµРЅРґР°С†РёСЏ, РІРµРґСЊ РїРѕРґР±РѕСЂ РїР°СЂРѕР»СЏ вЂ” РЅРµСЃР»РѕР¶РЅР°СЏ РѕРїРµСЂР°С†РёСЏ, СЃ РєРѕС‚РѕСЂРѕР№ СЃРїСЂР°РІР»СЏСЋС‚СЃСЏ РґР°Р¶Рµ РЅРµРѕРїС‹С‚РЅС‹Рµ С…Р°РєРµСЂС‹. Р РµРіСѓР»СЏСЂРЅРѕ РјРµРЅСЏР№С‚Рµ РїР°СЂРѕР»Рё РѕС‚ СЃРІРѕРёС… Р°РєРєР°СѓРЅС‚РѕРІ РІ СЃРѕС†СЃРµС‚СЏС… Рё РїРѕС‡С‚РѕРІС‹С… СЏС‰РёРєРѕРІ, СЃС‚Р°СЂР°Р№С‚РµСЃСЊ РЅРµ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ РѕРґРёРЅ Рё С‚РѕС‚ Р¶Рµ РїР°СЂРѕР»СЊ РґР»СЏ СЂР°Р·РЅС‹С… СЃРµСЂРІРёСЃРѕРІ. РџСЂРё СЃРѕР·РґР°РЅРёРё РїР°СЂРѕР»СЏ РІР°Р¶РЅРѕ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ СЃРёР»СЊРЅС‹Рµ РєРѕРјР±РёРЅР°С†РёРё. РўР°Рє, РїРѕРґРѕР±СЂР°С‚СЊ РїР°СЂРѕР»СЊ SemenPetrov_96 РЅРµСЃР»РѕР¶РЅРѕ. Рђ РІРѕС‚ son_sVoe9o.otza РІС‹РіР»СЏРґРёС‚ Р±РѕР»РµРµ РЅР°РґРµР¶РЅС‹Рј вЂ” РІ РЅРµРј РЅРµС‚ РёРјРµРЅРё РёР»Рё РіРѕРґР° СЂРѕР¶РґРµРЅРёСЏ РІР»Р°РґРµР»СЊС†Р°, Р·Р°С‚Рѕ РёСЃРїРѕР»СЊР·СѓСЋС‚СЃСЏ СЃР»РѕРІР° РЅР° РґРІСѓС… СЏР·С‹РєР°С…, Р° С†РёС„СЂР° Рё Р·Р°РіР»Р°РІРЅР°СЏ Р±СѓРєРІР° СЃС‚РѕСЏС‚ РІ СЃР»СѓС‡Р°Р№РЅС‹С… РјРµСЃС‚Р°С….
 <br>
-2.Заведите дополнительный почтовый ящик. Практически все сайты — магазины, газеты и журналы, социальные сети — запрашивают при регистрации электронную почту. Заведите специальный адрес, который будете указывать в таких случаях. Пусть вашу основную почту знают только коллеги и близкие. Так у вас меньше шансов стать жертвой фишинга или спам-рассылки, а у мошенников — узнать и взломать вашу почту с ценной информацией.
+2.Р—Р°РІРµРґРёС‚Рµ РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅС‹Р№ РїРѕС‡С‚РѕРІС‹Р№ СЏС‰РёРє. РџСЂР°РєС‚РёС‡РµСЃРєРё РІСЃРµ СЃР°Р№С‚С‹ вЂ” РјР°РіР°Р·РёРЅС‹, РіР°Р·РµС‚С‹ Рё Р¶СѓСЂРЅР°Р»С‹, СЃРѕС†РёР°Р»СЊРЅС‹Рµ СЃРµС‚Рё вЂ” Р·Р°РїСЂР°С€РёРІР°СЋС‚ РїСЂРё СЂРµРіРёСЃС‚СЂР°С†РёРё СЌР»РµРєС‚СЂРѕРЅРЅСѓСЋ РїРѕС‡С‚Сѓ. Р—Р°РІРµРґРёС‚Рµ СЃРїРµС†РёР°Р»СЊРЅС‹Р№ Р°РґСЂРµСЃ, РєРѕС‚РѕСЂС‹Р№ Р±СѓРґРµС‚Рµ СѓРєР°Р·С‹РІР°С‚СЊ РІ С‚Р°РєРёС… СЃР»СѓС‡Р°СЏС…. РџСѓСЃС‚СЊ РІР°С€Сѓ РѕСЃРЅРѕРІРЅСѓСЋ РїРѕС‡С‚Сѓ Р·РЅР°СЋС‚ С‚РѕР»СЊРєРѕ РєРѕР»Р»РµРіРё Рё Р±Р»РёР·РєРёРµ. РўР°Рє Сѓ РІР°СЃ РјРµРЅСЊС€Рµ С€Р°РЅСЃРѕРІ СЃС‚Р°С‚СЊ Р¶РµСЂС‚РІРѕР№ С„РёС€РёРЅРіР° РёР»Рё СЃРїР°Рј-СЂР°СЃСЃС‹Р»РєРё, Р° Сѓ РјРѕС€РµРЅРЅРёРєРѕРІ вЂ” СѓР·РЅР°С‚СЊ Рё РІР·Р»РѕРјР°С‚СЊ РІР°С€Сѓ РїРѕС‡С‚Сѓ СЃ С†РµРЅРЅРѕР№ РёРЅС„РѕСЂРјР°С†РёРµР№.
 <br>
-3.При покупках в интернете пользуйтесь банковской картой с небольшим объемом средств. Ваш любимый онлайн-магазин в любой момент может подвергнуться хакерской атаке, да и никто из нас не застрахован от случайного попадания на сайт-зеркало — мошеннический интернет-ресурс, который в точности повторяет интерфейс популярного сайта. Если данные вашей карты все же окажутся в руках мошенника, гораздо проще принять потерю небольшой суммы денег, чем всех ваших накоплений. Для платежей в интернете можно оформить виртуальную банковскую карту — это гораздо быстрее. Для защиты от списаний средств мошенниками настройте также максимальную сумму покупок. Такое ограничение позволит выиграть время и вовремя заблокировать карту.
+3.РџСЂРё РїРѕРєСѓРїРєР°С… РІ РёРЅС‚РµСЂРЅРµС‚Рµ РїРѕР»СЊР·СѓР№С‚РµСЃСЊ Р±Р°РЅРєРѕРІСЃРєРѕР№ РєР°СЂС‚РѕР№ СЃ РЅРµР±РѕР»СЊС€РёРј РѕР±СЉРµРјРѕРј СЃСЂРµРґСЃС‚РІ. Р’Р°С€ Р»СЋР±РёРјС‹Р№ РѕРЅР»Р°Р№РЅ-РјР°РіР°Р·РёРЅ РІ Р»СЋР±РѕР№ РјРѕРјРµРЅС‚ РјРѕР¶РµС‚ РїРѕРґРІРµСЂРіРЅСѓС‚СЊСЃСЏ С…Р°РєРµСЂСЃРєРѕР№ Р°С‚Р°РєРµ, РґР° Рё РЅРёРєС‚Рѕ РёР· РЅР°СЃ РЅРµ Р·Р°СЃС‚СЂР°С…РѕРІР°РЅ РѕС‚ СЃР»СѓС‡Р°Р№РЅРѕРіРѕ РїРѕРїР°РґР°РЅРёСЏ РЅР° СЃР°Р№С‚-Р·РµСЂРєР°Р»Рѕ вЂ” РјРѕС€РµРЅРЅРёС‡РµСЃРєРёР№ РёРЅС‚РµСЂРЅРµС‚-СЂРµСЃСѓСЂСЃ, РєРѕС‚РѕСЂС‹Р№ РІ С‚РѕС‡РЅРѕСЃС‚Рё РїРѕРІС‚РѕСЂСЏРµС‚ РёРЅС‚РµСЂС„РµР№СЃ РїРѕРїСѓР»СЏСЂРЅРѕРіРѕ СЃР°Р№С‚Р°. Р•СЃР»Рё РґР°РЅРЅС‹Рµ РІР°С€РµР№ РєР°СЂС‚С‹ РІСЃРµ Р¶Рµ РѕРєР°Р¶СѓС‚СЃСЏ РІ СЂСѓРєР°С… РјРѕС€РµРЅРЅРёРєР°, РіРѕСЂР°Р·РґРѕ РїСЂРѕС‰Рµ РїСЂРёРЅСЏС‚СЊ РїРѕС‚РµСЂСЋ РЅРµР±РѕР»СЊС€РѕР№ СЃСѓРјРјС‹ РґРµРЅРµРі, С‡РµРј РІСЃРµС… РІР°С€РёС… РЅР°РєРѕРїР»РµРЅРёР№. Р”Р»СЏ РїР»Р°С‚РµР¶РµР№ РІ РёРЅС‚РµСЂРЅРµС‚Рµ РјРѕР¶РЅРѕ РѕС„РѕСЂРјРёС‚СЊ РІРёСЂС‚СѓР°Р»СЊРЅСѓСЋ Р±Р°РЅРєРѕРІСЃРєСѓСЋ РєР°СЂС‚Сѓ вЂ” СЌС‚Рѕ РіРѕСЂР°Р·РґРѕ Р±С‹СЃС‚СЂРµРµ. Р”Р»СЏ Р·Р°С‰РёС‚С‹ РѕС‚ СЃРїРёСЃР°РЅРёР№ СЃСЂРµРґСЃС‚РІ РјРѕС€РµРЅРЅРёРєР°РјРё РЅР°СЃС‚СЂРѕР№С‚Рµ С‚Р°РєР¶Рµ РјР°РєСЃРёРјР°Р»СЊРЅСѓСЋ СЃСѓРјРјСѓ РїРѕРєСѓРїРѕРє. РўР°РєРѕРµ РѕРіСЂР°РЅРёС‡РµРЅРёРµ РїРѕР·РІРѕР»РёС‚ РІС‹РёРіСЂР°С‚СЊ РІСЂРµРјСЏ Рё РІРѕРІСЂРµРјСЏ Р·Р°Р±Р»РѕРєРёСЂРѕРІР°С‚СЊ РєР°СЂС‚Сѓ.
 <br>
-4.Читайте политику конфиденциальности. Звучит скучно, но в этом документе сайт рассказывает, какие данные собирает, как хранит и использует их. Часто ссылку на политику конфиденциальности можно найти в нижней части страницы или в чекбоксе рядом с формой сбора данных. По закону сайты должны получить согласие пользователя на обработку персональных данных, а потому вас, скорее всего, попросят поставить галочку в доказательство того, что вы ознакомились с политикой.
+4.Р§РёС‚Р°Р№С‚Рµ РїРѕР»РёС‚РёРєСѓ РєРѕРЅС„РёРґРµРЅС†РёР°Р»СЊРЅРѕСЃС‚Рё. Р—РІСѓС‡РёС‚ СЃРєСѓС‡РЅРѕ, РЅРѕ РІ СЌС‚РѕРј РґРѕРєСѓРјРµРЅС‚Рµ СЃР°Р№С‚ СЂР°СЃСЃРєР°Р·С‹РІР°РµС‚, РєР°РєРёРµ РґР°РЅРЅС‹Рµ СЃРѕР±РёСЂР°РµС‚, РєР°Рє С…СЂР°РЅРёС‚ Рё РёСЃРїРѕР»СЊР·СѓРµС‚ РёС…. Р§Р°СЃС‚Рѕ СЃСЃС‹Р»РєСѓ РЅР° РїРѕР»РёС‚РёРєСѓ РєРѕРЅС„РёРґРµРЅС†РёР°Р»СЊРЅРѕСЃС‚Рё РјРѕР¶РЅРѕ РЅР°Р№С‚Рё РІ РЅРёР¶РЅРµР№ С‡Р°СЃС‚Рё СЃС‚СЂР°РЅРёС†С‹ РёР»Рё РІ С‡РµРєР±РѕРєСЃРµ СЂСЏРґРѕРј СЃ С„РѕСЂРјРѕР№ СЃР±РѕСЂР° РґР°РЅРЅС‹С…. РџРѕ Р·Р°РєРѕРЅСѓ СЃР°Р№С‚С‹ РґРѕР»Р¶РЅС‹ РїРѕР»СѓС‡РёС‚СЊ СЃРѕРіР»Р°СЃРёРµ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ РЅР° РѕР±СЂР°Р±РѕС‚РєСѓ РїРµСЂСЃРѕРЅР°Р»СЊРЅС‹С… РґР°РЅРЅС‹С…, Р° РїРѕС‚РѕРјСѓ РІР°СЃ, СЃРєРѕСЂРµРµ РІСЃРµРіРѕ, РїРѕРїСЂРѕСЃСЏС‚ РїРѕСЃС‚Р°РІРёС‚СЊ РіР°Р»РѕС‡РєСѓ РІ РґРѕРєР°Р·Р°С‚РµР»СЊСЃС‚РІРѕ С‚РѕРіРѕ, С‡С‚Рѕ РІС‹ РѕР·РЅР°РєРѕРјРёР»РёСЃСЊ СЃ РїРѕР»РёС‚РёРєРѕР№.
 <br>
-5.Закройте свои аккаунты в соцсетях и включите двухфакторную аутентификацию. Лучший способ защиты персональных данных в интернете — вовсе не загружать их в сеть. Но если все же очень хочется, то делитесь новостями и фотографиями только с друзьями. По вашему контенту мошенники могут отследить, например, когда вас нет дома или где хранятся ценные вещи. Внимательно читая посты, легко узнать имя первой учительницы или кличку любимого питомца — ответы на популярные контрольные вопросы. Двухфакторная аутентификация же позволит дополнительно защитить аккаунт — при входе в него система не только запросит логин и пароль, но и отправит вам на телефон или e-mail проверочный код.
+5.Р—Р°РєСЂРѕР№С‚Рµ СЃРІРѕРё Р°РєРєР°СѓРЅС‚С‹ РІ СЃРѕС†СЃРµС‚СЏС… Рё РІРєР»СЋС‡РёС‚Рµ РґРІСѓС…С„Р°РєС‚РѕСЂРЅСѓСЋ Р°СѓС‚РµРЅС‚РёС„РёРєР°С†РёСЋ. Р›СѓС‡С€РёР№ СЃРїРѕСЃРѕР± Р·Р°С‰РёС‚С‹ РїРµСЂСЃРѕРЅР°Р»СЊРЅС‹С… РґР°РЅРЅС‹С… РІ РёРЅС‚РµСЂРЅРµС‚Рµ вЂ” РІРѕРІСЃРµ РЅРµ Р·Р°РіСЂСѓР¶Р°С‚СЊ РёС… РІ СЃРµС‚СЊ. РќРѕ РµСЃР»Рё РІСЃРµ Р¶Рµ РѕС‡РµРЅСЊ С…РѕС‡РµС‚СЃСЏ, С‚Рѕ РґРµР»РёС‚РµСЃСЊ РЅРѕРІРѕСЃС‚СЏРјРё Рё С„РѕС‚РѕРіСЂР°С„РёСЏРјРё С‚РѕР»СЊРєРѕ СЃ РґСЂСѓР·СЊСЏРјРё. РџРѕ РІР°С€РµРјСѓ РєРѕРЅС‚РµРЅС‚Сѓ РјРѕС€РµРЅРЅРёРєРё РјРѕРіСѓС‚ РѕС‚СЃР»РµРґРёС‚СЊ, РЅР°РїСЂРёРјРµСЂ, РєРѕРіРґР° РІР°СЃ РЅРµС‚ РґРѕРјР° РёР»Рё РіРґРµ С…СЂР°РЅСЏС‚СЃСЏ С†РµРЅРЅС‹Рµ РІРµС‰Рё. Р’РЅРёРјР°С‚РµР»СЊРЅРѕ С‡РёС‚Р°СЏ РїРѕСЃС‚С‹, Р»РµРіРєРѕ СѓР·РЅР°С‚СЊ РёРјСЏ РїРµСЂРІРѕР№ СѓС‡РёС‚РµР»СЊРЅРёС†С‹ РёР»Рё РєР»РёС‡РєСѓ Р»СЋР±РёРјРѕРіРѕ РїРёС‚РѕРјС†Р° вЂ” РѕС‚РІРµС‚С‹ РЅР° РїРѕРїСѓР»СЏСЂРЅС‹Рµ РєРѕРЅС‚СЂРѕР»СЊРЅС‹Рµ РІРѕРїСЂРѕСЃС‹. Р”РІСѓС…С„Р°РєС‚РѕСЂРЅР°СЏ Р°СѓС‚РµРЅС‚РёС„РёРєР°С†РёСЏ Р¶Рµ РїРѕР·РІРѕР»РёС‚ РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅРѕ Р·Р°С‰РёС‚РёС‚СЊ Р°РєРєР°СѓРЅС‚ вЂ” РїСЂРё РІС…РѕРґРµ РІ РЅРµРіРѕ СЃРёСЃС‚РµРјР° РЅРµ С‚РѕР»СЊРєРѕ Р·Р°РїСЂРѕСЃРёС‚ Р»РѕРіРёРЅ Рё РїР°СЂРѕР»СЊ, РЅРѕ Рё РѕС‚РїСЂР°РІРёС‚ РІР°Рј РЅР° С‚РµР»РµС„РѕРЅ РёР»Рё e-mail РїСЂРѕРІРµСЂРѕС‡РЅС‹Р№ РєРѕРґ.
 <br>
-6.Не выкладывайте в соцсетях фотографии документов. Кажется, всем известно, что показывать незнакомцам свои паспортные данные опасно. Но потенциальная угроза содержится в любом документе, даже в авиабилете — с помощью указанного на билете кода бронирования можно узнать информацию о вас и вашем полете, а затем и получить доступ к паспортным данным, электронной почте и номеру телефона, изменить настройки бронирования и даже снять вас с рейса.
+6.РќРµ РІС‹РєР»Р°РґС‹РІР°Р№С‚Рµ РІ СЃРѕС†СЃРµС‚СЏС… С„РѕС‚РѕРіСЂР°С„РёРё РґРѕРєСѓРјРµРЅС‚РѕРІ. РљР°Р¶РµС‚СЃСЏ, РІСЃРµРј РёР·РІРµСЃС‚РЅРѕ, С‡С‚Рѕ РїРѕРєР°Р·С‹РІР°С‚СЊ РЅРµР·РЅР°РєРѕРјС†Р°Рј СЃРІРѕРё РїР°СЃРїРѕСЂС‚РЅС‹Рµ РґР°РЅРЅС‹Рµ РѕРїР°СЃРЅРѕ. РќРѕ РїРѕС‚РµРЅС†РёР°Р»СЊРЅР°СЏ СѓРіСЂРѕР·Р° СЃРѕРґРµСЂР¶РёС‚СЃСЏ РІ Р»СЋР±РѕРј РґРѕРєСѓРјРµРЅС‚Рµ, РґР°Р¶Рµ РІ Р°РІРёР°Р±РёР»РµС‚Рµ вЂ” СЃ РїРѕРјРѕС‰СЊСЋ СѓРєР°Р·Р°РЅРЅРѕРіРѕ РЅР° Р±РёР»РµС‚Рµ РєРѕРґР° Р±СЂРѕРЅРёСЂРѕРІР°РЅРёСЏ РјРѕР¶РЅРѕ СѓР·РЅР°С‚СЊ РёРЅС„РѕСЂРјР°С†РёСЋ Рѕ РІР°СЃ Рё РІР°С€РµРј РїРѕР»РµС‚Рµ, Р° Р·Р°С‚РµРј Рё РїРѕР»СѓС‡РёС‚СЊ РґРѕСЃС‚СѓРї Рє РїР°СЃРїРѕСЂС‚РЅС‹Рј РґР°РЅРЅС‹Рј, СЌР»РµРєС‚СЂРѕРЅРЅРѕР№ РїРѕС‡С‚Рµ Рё РЅРѕРјРµСЂСѓ С‚РµР»РµС„РѕРЅР°, РёР·РјРµРЅРёС‚СЊ РЅР°СЃС‚СЂРѕР№РєРё Р±СЂРѕРЅРёСЂРѕРІР°РЅРёСЏ Рё РґР°Р¶Рµ СЃРЅСЏС‚СЊ РІР°СЃ СЃ СЂРµР№СЃР°.
 <br>
-7.Не используйте Wi-Fi в общественных местах. Нередко мошенники создают сети, которые маскируют под обычный открытый Wi-Fi кафе, метро или любого другого общественного места. Их цель — перехватить логины и пароли (например, от приложения мобильного банка) подключившегося через их сеть пользователя. При этом даже проверенная общественная сеть несет в себе угрозу, так как имеет очень низкую степень защиты от хакеров.
+7.РќРµ РёСЃРїРѕР»СЊР·СѓР№С‚Рµ Wi-Fi РІ РѕР±С‰РµСЃС‚РІРµРЅРЅС‹С… РјРµСЃС‚Р°С…. РќРµСЂРµРґРєРѕ РјРѕС€РµРЅРЅРёРєРё СЃРѕР·РґР°СЋС‚ СЃРµС‚Рё, РєРѕС‚РѕСЂС‹Рµ РјР°СЃРєРёСЂСѓСЋС‚ РїРѕРґ РѕР±С‹С‡РЅС‹Р№ РѕС‚РєСЂС‹С‚С‹Р№ Wi-Fi РєР°С„Рµ, РјРµС‚СЂРѕ РёР»Рё Р»СЋР±РѕРіРѕ РґСЂСѓРіРѕРіРѕ РѕР±С‰РµСЃС‚РІРµРЅРЅРѕРіРѕ РјРµСЃС‚Р°. РС… С†РµР»СЊ вЂ” РїРµСЂРµС…РІР°С‚РёС‚СЊ Р»РѕРіРёРЅС‹ Рё РїР°СЂРѕР»Рё (РЅР°РїСЂРёРјРµСЂ, РѕС‚ РїСЂРёР»РѕР¶РµРЅРёСЏ РјРѕР±РёР»СЊРЅРѕРіРѕ Р±Р°РЅРєР°) РїРѕРґРєР»СЋС‡РёРІС€РµРіРѕСЃСЏ С‡РµСЂРµР· РёС… СЃРµС‚СЊ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ. РџСЂРё СЌС‚РѕРј РґР°Р¶Рµ РїСЂРѕРІРµСЂРµРЅРЅР°СЏ РѕР±С‰РµСЃС‚РІРµРЅРЅР°СЏ СЃРµС‚СЊ РЅРµСЃРµС‚ РІ СЃРµР±Рµ СѓРіСЂРѕР·Сѓ, С‚Р°Рє РєР°Рє РёРјРµРµС‚ РѕС‡РµРЅСЊ РЅРёР·РєСѓСЋ СЃС‚РµРїРµРЅСЊ Р·Р°С‰РёС‚С‹ РѕС‚ С…Р°РєРµСЂРѕРІ.
 <br>
-8.Не принимайте cookie-файлы автоматически. В большинстве своем cookie безопасны для пользователя. Но существуют и такие, которые угрожают конфиденциальности данных. Перед тем как согласиться на использование сайтом cookie, самостоятельно выберите те данные, которые он сможет сохранить. Обычно ссылка на меню настроек зашита в уведомление об использовании cookie, которое появляется на сайте автоматически.
+8.РќРµ РїСЂРёРЅРёРјР°Р№С‚Рµ cookie-С„Р°Р№Р»С‹ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРё. Р’ Р±РѕР»СЊС€РёРЅСЃС‚РІРµ СЃРІРѕРµРј cookie Р±РµР·РѕРїР°СЃРЅС‹ РґР»СЏ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ. РќРѕ СЃСѓС‰РµСЃС‚РІСѓСЋС‚ Рё С‚Р°РєРёРµ, РєРѕС‚РѕСЂС‹Рµ СѓРіСЂРѕР¶Р°СЋС‚ РєРѕРЅС„РёРґРµРЅС†РёР°Р»СЊРЅРѕСЃС‚Рё РґР°РЅРЅС‹С…. РџРµСЂРµРґ С‚РµРј РєР°Рє СЃРѕРіР»Р°СЃРёС‚СЊСЃСЏ РЅР° РёСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ СЃР°Р№С‚РѕРј cookie, СЃР°РјРѕСЃС‚РѕСЏС‚РµР»СЊРЅРѕ РІС‹Р±РµСЂРёС‚Рµ С‚Рµ РґР°РЅРЅС‹Рµ, РєРѕС‚РѕСЂС‹Рµ РѕРЅ СЃРјРѕР¶РµС‚ СЃРѕС…СЂР°РЅРёС‚СЊ. РћР±С‹С‡РЅРѕ СЃСЃС‹Р»РєР° РЅР° РјРµРЅСЋ РЅР°СЃС‚СЂРѕРµРє Р·Р°С€РёС‚Р° РІ СѓРІРµРґРѕРјР»РµРЅРёРµ РѕР± РёСЃРїРѕР»СЊР·РѕРІР°РЅРёРё cookie, РєРѕС‚РѕСЂРѕРµ РїРѕСЏРІР»СЏРµС‚СЃСЏ РЅР° СЃР°Р№С‚Рµ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРё.
 <br>
-9.Внимательно относитесь к сообщениям с гиперссылками. Часто мошенники отправляют на почту потенциальной жертвы заманчивые «спецпредложения» или уведомления о неожиданном большом выигрыше. Акции якобы действуют ограниченное время, а приз нужно забрать очень срочно. Так вас побуждают перейти по указанной в сообщении ссылке как можно скорее. Ссылка в письме мошенников, как правило, ведет на сайт-зеркало магазина или образовательной платформы, где вас попросят ввести данные банковской карты. А чем быстрее, как нам кажется, нужно сделать это, тем менее мы бдительны и тем легче попадаемся на уловку. Будьте внимательными к адресу ссылок — адрес сайта-зеркала может отличаться от настоящего всего одним символом, который легко не заметить. Трезво оценивайте подобные сообщения; если вам предлагают сказочную выгоду — это точно мошенники.
+9.Р’РЅРёРјР°С‚РµР»СЊРЅРѕ РѕС‚РЅРѕСЃРёС‚РµСЃСЊ Рє СЃРѕРѕР±С‰РµРЅРёСЏРј СЃ РіРёРїРµСЂСЃСЃС‹Р»РєР°РјРё. Р§Р°СЃС‚Рѕ РјРѕС€РµРЅРЅРёРєРё РѕС‚РїСЂР°РІР»СЏСЋС‚ РЅР° РїРѕС‡С‚Сѓ РїРѕС‚РµРЅС†РёР°Р»СЊРЅРѕР№ Р¶РµСЂС‚РІС‹ Р·Р°РјР°РЅС‡РёРІС‹Рµ В«СЃРїРµС†РїСЂРµРґР»РѕР¶РµРЅРёСЏВ» РёР»Рё СѓРІРµРґРѕРјР»РµРЅРёСЏ Рѕ РЅРµРѕР¶РёРґР°РЅРЅРѕРј Р±РѕР»СЊС€РѕРј РІС‹РёРіСЂС‹С€Рµ. РђРєС†РёРё СЏРєРѕР±С‹ РґРµР№СЃС‚РІСѓСЋС‚ РѕРіСЂР°РЅРёС‡РµРЅРЅРѕРµ РІСЂРµРјСЏ, Р° РїСЂРёР· РЅСѓР¶РЅРѕ Р·Р°Р±СЂР°С‚СЊ РѕС‡РµРЅСЊ СЃСЂРѕС‡РЅРѕ. РўР°Рє РІР°СЃ РїРѕР±СѓР¶РґР°СЋС‚ РїРµСЂРµР№С‚Рё РїРѕ СѓРєР°Р·Р°РЅРЅРѕР№ РІ СЃРѕРѕР±С‰РµРЅРёРё СЃСЃС‹Р»РєРµ РєР°Рє РјРѕР¶РЅРѕ СЃРєРѕСЂРµРµ. РЎСЃС‹Р»РєР° РІ РїРёСЃСЊРјРµ РјРѕС€РµРЅРЅРёРєРѕРІ, РєР°Рє РїСЂР°РІРёР»Рѕ, РІРµРґРµС‚ РЅР° СЃР°Р№С‚-Р·РµСЂРєР°Р»Рѕ РјР°РіР°Р·РёРЅР° РёР»Рё РѕР±СЂР°Р·РѕРІР°С‚РµР»СЊРЅРѕР№ РїР»Р°С‚С„РѕСЂРјС‹, РіРґРµ РІР°СЃ РїРѕРїСЂРѕСЃСЏС‚ РІРІРµСЃС‚Рё РґР°РЅРЅС‹Рµ Р±Р°РЅРєРѕРІСЃРєРѕР№ РєР°СЂС‚С‹. Рђ С‡РµРј Р±С‹СЃС‚СЂРµРµ, РєР°Рє РЅР°Рј РєР°Р¶РµС‚СЃСЏ, РЅСѓР¶РЅРѕ СЃРґРµР»Р°С‚СЊ СЌС‚Рѕ, С‚РµРј РјРµРЅРµРµ РјС‹ Р±РґРёС‚РµР»СЊРЅС‹ Рё С‚РµРј Р»РµРіС‡Рµ РїРѕРїР°РґР°РµРјСЃСЏ РЅР° СѓР»РѕРІРєСѓ. Р‘СѓРґСЊС‚Рµ РІРЅРёРјР°С‚РµР»СЊРЅС‹РјРё Рє Р°РґСЂРµСЃСѓ СЃСЃС‹Р»РѕРє вЂ” Р°РґСЂРµСЃ СЃР°Р№С‚Р°-Р·РµСЂРєР°Р»Р° РјРѕР¶РµС‚ РѕС‚Р»РёС‡Р°С‚СЊСЃСЏ РѕС‚ РЅР°СЃС‚РѕСЏС‰РµРіРѕ РІСЃРµРіРѕ РѕРґРЅРёРј СЃРёРјРІРѕР»РѕРј, РєРѕС‚РѕСЂС‹Р№ Р»РµРіРєРѕ РЅРµ Р·Р°РјРµС‚РёС‚СЊ. РўСЂРµР·РІРѕ РѕС†РµРЅРёРІР°Р№С‚Рµ РїРѕРґРѕР±РЅС‹Рµ СЃРѕРѕР±С‰РµРЅРёСЏ; РµСЃР»Рё РІР°Рј РїСЂРµРґР»Р°РіР°СЋС‚ СЃРєР°Р·РѕС‡РЅСѓСЋ РІС‹РіРѕРґСѓ вЂ” СЌС‚Рѕ С‚РѕС‡РЅРѕ РјРѕС€РµРЅРЅРёРєРё.
 <br>
-10.Проверяйте личный компьютер на наличие вирусов. Нередко хакеры устанавливают на компьютеры пользователей программы-вымогатели, блокирующие экран, и требуют выкуп за данные жертвы. Чаще всего оплата не помогает разблокировать устройство, и утерянными оказываются и данные, и деньги. Антивирус позволит заблаговременно обнаружить такие программы и держать в сохранности персональные данные.
+10.РџСЂРѕРІРµСЂСЏР№С‚Рµ Р»РёС‡РЅС‹Р№ РєРѕРјРїСЊСЋС‚РµСЂ РЅР° РЅР°Р»РёС‡РёРµ РІРёСЂСѓСЃРѕРІ. РќРµСЂРµРґРєРѕ С…Р°РєРµСЂС‹ СѓСЃС‚Р°РЅР°РІР»РёРІР°СЋС‚ РЅР° РєРѕРјРїСЊСЋС‚РµСЂС‹ РїРѕР»СЊР·РѕРІР°С‚РµР»РµР№ РїСЂРѕРіСЂР°РјРјС‹-РІС‹РјРѕРіР°С‚РµР»Рё, Р±Р»РѕРєРёСЂСѓСЋС‰РёРµ СЌРєСЂР°РЅ, Рё С‚СЂРµР±СѓСЋС‚ РІС‹РєСѓРї Р·Р° РґР°РЅРЅС‹Рµ Р¶РµСЂС‚РІС‹. Р§Р°С‰Рµ РІСЃРµРіРѕ РѕРїР»Р°С‚Р° РЅРµ РїРѕРјРѕРіР°РµС‚ СЂР°Р·Р±Р»РѕРєРёСЂРѕРІР°С‚СЊ СѓСЃС‚СЂРѕР№СЃС‚РІРѕ, Рё СѓС‚РµСЂСЏРЅРЅС‹РјРё РѕРєР°Р·С‹РІР°СЋС‚СЃСЏ Рё РґР°РЅРЅС‹Рµ, Рё РґРµРЅСЊРіРё. РђРЅС‚РёРІРёСЂСѓСЃ РїРѕР·РІРѕР»РёС‚ Р·Р°Р±Р»Р°РіРѕРІСЂРµРјРµРЅРЅРѕ РѕР±РЅР°СЂСѓР¶РёС‚СЊ С‚Р°РєРёРµ РїСЂРѕРіСЂР°РјРјС‹ Рё РґРµСЂР¶Р°С‚СЊ РІ СЃРѕС…СЂР°РЅРЅРѕСЃС‚Рё РїРµСЂСЃРѕРЅР°Р»СЊРЅС‹Рµ РґР°РЅРЅС‹Рµ.
 </p>
 </i>	
 </font>
