--- a/igri.html
+++ b/igri.html
@@ -2,60 +2,61 @@
 <HEAD> 
 <body bgcolor=#ccffcc>
 
-<font size=5>
+<font size=5 face="Verdana">
 <i>
-<font color=#ff0011><p align=center><b>ОНЛАЙН-ИГРЫ</b></font></p>
-<a href="main.html" target="майн" >назад</a></i>
+<font color=#ff0011><p align=center><b>РћРќР›РђР™Рќ-РР“Р Р«</b></font></p>
+<a href="main.html" target="РјР°Р№РЅ" >РЅР°Р·Р°Рґ</a></i>
 <p align=justify>
 <br>
-<b>Онлайн-игра</b> – компьютерная игра, главной особенностью которой является
-необходимость постоянного подключения к сети Интернет. Число игроков в самых
-популярных онлайн-играх может достигать сотен тысяч пользователей.
+<b>РћРЅР»Р°Р№РЅ-РёРіСЂР°</b> вЂ“ РєРѕРјРїСЊСЋС‚РµСЂРЅР°СЏ РёРіСЂР°, РіР»Р°РІРЅРѕР№ РѕСЃРѕР±РµРЅРЅРѕСЃС‚СЊСЋ РєРѕС‚РѕСЂРѕР№ СЏРІР»СЏРµС‚СЃСЏ
+РЅРµРѕР±С…РѕРґРёРјРѕСЃС‚СЊ РїРѕСЃС‚РѕСЏРЅРЅРѕРіРѕ РїРѕРґРєР»СЋС‡РµРЅРёСЏ Рє СЃРµС‚Рё РРЅС‚РµСЂРЅРµС‚. Р§РёСЃР»Рѕ РёРіСЂРѕРєРѕРІ РІ СЃР°РјС‹С…
+РїРѕРїСѓР»СЏСЂРЅС‹С… РѕРЅР»Р°Р№РЅ-РёРіСЂР°С… РјРѕР¶РµС‚ РґРѕСЃС‚РёРіР°С‚СЊ СЃРѕС‚РµРЅ С‚С‹СЃСЏС‡ РїРѕР»СЊР·РѕРІР°С‚РµР»РµР№.
 <br>
-Многие родители не задумываются в какие игры играют их дети, и не контролируют соблюдение
-возрастных ограничений, не проверяют с кем они общаются в играх, сутками проводя время за
-компьютером
+РњРЅРѕРіРёРµ СЂРѕРґРёС‚РµР»Рё РЅРµ Р·Р°РґСѓРјС‹РІР°СЋС‚СЃСЏ РІ РєР°РєРёРµ РёРіСЂС‹ РёРіСЂР°СЋС‚ РёС… РґРµС‚Рё, Рё РЅРµ РєРѕРЅС‚СЂРѕР»РёСЂСѓСЋС‚ СЃРѕР±Р»СЋРґРµРЅРёРµ
+РІРѕР·СЂР°СЃС‚РЅС‹С… РѕРіСЂР°РЅРёС‡РµРЅРёР№, РЅРµ РїСЂРѕРІРµСЂСЏСЋС‚ СЃ РєРµРј РѕРЅРё РѕР±С‰Р°СЋС‚СЃСЏ РІ РёРіСЂР°С…, СЃСѓС‚РєР°РјРё РїСЂРѕРІРѕРґСЏ РІСЂРµРјСЏ Р·Р°
+РєРѕРјРїСЊСЋС‚РµСЂРѕРј
 <br>
 
-<img src="игры.jpg">
+<img src="РёРіСЂС‹.jpg">
 <br>
-<b>Какие опасности есть в онлайн-играх?
+<b>РљР°РєРёРµ РѕРїР°СЃРЅРѕСЃС‚Рё РµСЃС‚СЊ РІ РѕРЅР»Р°Р№РЅ-РёРіСЂР°С…?
 </b>
 <br>
-Жестокие сюжеты – некоторые компьютерные игры, особенно в жанре «стрелялки от первого
-лица», пропагандируют жестокость и насилие. Видеоигры указанного жанра, изначально
-разработанные для тренировки сотрудников служб специального назначения для выработки
-оптимального поведения в экстремальной ситуации, вызывают повышенный интерес у детей
-и нередко случается, что ребенок хочет повторить сценарий такой игры в реальности. Многие
-эксперты отмечают, что подростки, планировавшие вооруженные нападения на образовательные
-учреждения, почти все свое свободное время проводили в онлайн-играх подобного жанра. 
+Р–РµСЃС‚РѕРєРёРµ СЃСЋР¶РµС‚С‹ вЂ“ РЅРµРєРѕС‚РѕСЂС‹Рµ РєРѕРјРїСЊСЋС‚РµСЂРЅС‹Рµ РёРіСЂС‹, РѕСЃРѕР±РµРЅРЅРѕ РІ Р¶Р°РЅСЂРµ В«СЃС‚СЂРµР»СЏР»РєРё РѕС‚ РїРµСЂРІРѕРіРѕ
+Р»РёС†Р°В», РїСЂРѕРїР°РіР°РЅРґРёСЂСѓСЋС‚ Р¶РµСЃС‚РѕРєРѕСЃС‚СЊ Рё РЅР°СЃРёР»РёРµ. Р’РёРґРµРѕРёРіСЂС‹ СѓРєР°Р·Р°РЅРЅРѕРіРѕ Р¶Р°РЅСЂР°, РёР·РЅР°С‡Р°Р»СЊРЅРѕ
+СЂР°Р·СЂР°Р±РѕС‚Р°РЅРЅС‹Рµ РґР»СЏ С‚СЂРµРЅРёСЂРѕРІРєРё СЃРѕС‚СЂСѓРґРЅРёРєРѕРІ СЃР»СѓР¶Р± СЃРїРµС†РёР°Р»СЊРЅРѕРіРѕ РЅР°Р·РЅР°С‡РµРЅРёСЏ РґР»СЏ РІС‹СЂР°Р±РѕС‚РєРё
+РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ РїРѕРІРµРґРµРЅРёСЏ РІ СЌРєСЃС‚СЂРµРјР°Р»СЊРЅРѕР№ СЃРёС‚СѓР°С†РёРё, РІС‹Р·С‹РІР°СЋС‚ РїРѕРІС‹С€РµРЅРЅС‹Р№ РёРЅС‚РµСЂРµСЃ Сѓ РґРµС‚РµР№
+Рё РЅРµСЂРµРґРєРѕ СЃР»СѓС‡Р°РµС‚СЃСЏ, С‡С‚Рѕ СЂРµР±РµРЅРѕРє С…РѕС‡РµС‚ РїРѕРІС‚РѕСЂРёС‚СЊ СЃС†РµРЅР°СЂРёР№ С‚Р°РєРѕР№ РёРіСЂС‹ РІ СЂРµР°Р»СЊРЅРѕСЃС‚Рё. РњРЅРѕРіРёРµ
+СЌРєСЃРїРµСЂС‚С‹ РѕС‚РјРµС‡Р°СЋС‚, С‡С‚Рѕ РїРѕРґСЂРѕСЃС‚РєРё, РїР»Р°РЅРёСЂРѕРІР°РІС€РёРµ РІРѕРѕСЂСѓР¶РµРЅРЅС‹Рµ РЅР°РїР°РґРµРЅРёСЏ РЅР° РѕР±СЂР°Р·РѕРІР°С‚РµР»СЊРЅС‹Рµ
+СѓС‡СЂРµР¶РґРµРЅРёСЏ, РїРѕС‡С‚Рё РІСЃРµ СЃРІРѕРµ СЃРІРѕР±РѕРґРЅРѕРµ РІСЂРµРјСЏ РїСЂРѕРІРѕРґРёР»Рё РІ РѕРЅР»Р°Р№РЅ-РёРіСЂР°С… РїРѕРґРѕР±РЅРѕРіРѕ Р¶Р°РЅСЂР°. 
 <br>
-Дети и подростки во внутриигровых чатах, в специализированных
-приложениях, а также в чатах стриминговых платформ, где обсуждаются
-онлайн игры (таких как Twitch, Discord) общаются с совершенно
-незнакомыми людьми и могут стать жертвой агрессии, травли и
-неприемлемого общения со стороны незнакомых взрослых игроков.
+Р”РµС‚Рё Рё РїРѕРґСЂРѕСЃС‚РєРё РІРѕ РІРЅСѓС‚СЂРёРёРіСЂРѕРІС‹С… С‡Р°С‚Р°С…, РІ СЃРїРµС†РёР°Р»РёР·РёСЂРѕРІР°РЅРЅС‹С…
+РїСЂРёР»РѕР¶РµРЅРёСЏС…, Р° С‚Р°РєР¶Рµ РІ С‡Р°С‚Р°С… СЃС‚СЂРёРјРёРЅРіРѕРІС‹С… РїР»Р°С‚С„РѕСЂРј, РіРґРµ РѕР±СЃСѓР¶РґР°СЋС‚СЃСЏ
+РѕРЅР»Р°Р№РЅ РёРіСЂС‹ (С‚Р°РєРёС… РєР°Рє Twitch, Discord) РѕР±С‰Р°СЋС‚СЃСЏ СЃ СЃРѕРІРµСЂС€РµРЅРЅРѕ
+РЅРµР·РЅР°РєРѕРјС‹РјРё Р»СЋРґСЊРјРё Рё РјРѕРіСѓС‚ СЃС‚Р°С‚СЊ Р¶РµСЂС‚РІРѕР№ Р°РіСЂРµСЃСЃРёРё, С‚СЂР°РІР»Рё Рё
+РЅРµРїСЂРёРµРјР»РµРјРѕРіРѕ РѕР±С‰РµРЅРёСЏ СЃРѕ СЃС‚РѕСЂРѕРЅС‹ РЅРµР·РЅР°РєРѕРјС‹С… РІР·СЂРѕСЃР»С‹С… РёРіСЂРѕРєРѕРІ.
 <br>
-Во внутриигровых чатах незнакомые взрослые могут отправить ребенку ссылки на
-мошеннические ресурсы, частные сервера или закрытые группы в соцсетях.
+Р’Рѕ РІРЅСѓС‚СЂРёРёРіСЂРѕРІС‹С… С‡Р°С‚Р°С… РЅРµР·РЅР°РєРѕРјС‹Рµ РІР·СЂРѕСЃР»С‹Рµ РјРѕРіСѓС‚ РѕС‚РїСЂР°РІРёС‚СЊ СЂРµР±РµРЅРєСѓ СЃСЃС‹Р»РєРё РЅР°
+РјРѕС€РµРЅРЅРёС‡РµСЃРєРёРµ СЂРµСЃСѓСЂСЃС‹, С‡Р°СЃС‚РЅС‹Рµ СЃРµСЂРІРµСЂР° РёР»Рё Р·Р°РєСЂС‹С‚С‹Рµ РіСЂСѓРїРїС‹ РІ СЃРѕС†СЃРµС‚СЏС….
 <br>
-Общение в игровых чатах практически невозможно отследить и контролировать. Этим
-пользуются провокаторы и преступники, которые ищут в игровых сообществах детей и подростков,
-поддающихся внушению, и заманивают их в свои преступные схемы.
+РћР±С‰РµРЅРёРµ РІ РёРіСЂРѕРІС‹С… С‡Р°С‚Р°С… РїСЂР°РєС‚РёС‡РµСЃРєРё РЅРµРІРѕР·РјРѕР¶РЅРѕ РѕС‚СЃР»РµРґРёС‚СЊ Рё РєРѕРЅС‚СЂРѕР»РёСЂРѕРІР°С‚СЊ. Р­С‚РёРј
+РїРѕР»СЊР·СѓСЋС‚СЃСЏ РїСЂРѕРІРѕРєР°С‚РѕСЂС‹ Рё РїСЂРµСЃС‚СѓРїРЅРёРєРё, РєРѕС‚РѕСЂС‹Рµ РёС‰СѓС‚ РІ РёРіСЂРѕРІС‹С… СЃРѕРѕР±С‰РµСЃС‚РІР°С… РґРµС‚РµР№ Рё РїРѕРґСЂРѕСЃС‚РєРѕРІ,
+РїРѕРґРґР°СЋС‰РёС…СЃСЏ РІРЅСѓС€РµРЅРёСЋ, Рё Р·Р°РјР°РЅРёРІР°СЋС‚ РёС… РІ СЃРІРѕРё РїСЂРµСЃС‚СѓРїРЅС‹Рµ СЃС…РµРјС‹.
 <br>
-Многие современные онлайн-игры позволяют создать свой собственный «сервер», в котором
-можно реализовать любую идею: воссоздать любую точку на земном шаре, либо создать
-симуляцию боевых действий, причем такой хостинг может находиться в любой точки земного
-шара. Управляется такой сервер только администратором (модератором), доступ предоставляется
-исключительно по рассылаемым пользователям ссылкам-приглашениям (инвайтам).
+РњРЅРѕРіРёРµ СЃРѕРІСЂРµРјРµРЅРЅС‹Рµ РѕРЅР»Р°Р№РЅ-РёРіСЂС‹ РїРѕР·РІРѕР»СЏСЋС‚ СЃРѕР·РґР°С‚СЊ СЃРІРѕР№ СЃРѕР±СЃС‚РІРµРЅРЅС‹Р№ В«СЃРµСЂРІРµСЂВ», РІ РєРѕС‚РѕСЂРѕРј
+РјРѕР¶РЅРѕ СЂРµР°Р»РёР·РѕРІР°С‚СЊ Р»СЋР±СѓСЋ РёРґРµСЋ: РІРѕСЃСЃРѕР·РґР°С‚СЊ Р»СЋР±СѓСЋ С‚РѕС‡РєСѓ РЅР° Р·РµРјРЅРѕРј С€Р°СЂРµ, Р»РёР±Рѕ СЃРѕР·РґР°С‚СЊ
+СЃРёРјСѓР»СЏС†РёСЋ Р±РѕРµРІС‹С… РґРµР№СЃС‚РІРёР№, РїСЂРёС‡РµРј С‚Р°РєРѕР№ С…РѕСЃС‚РёРЅРі РјРѕР¶РµС‚ РЅР°С…РѕРґРёС‚СЊСЃСЏ РІ Р»СЋР±РѕР№ С‚РѕС‡РєРё Р·РµРјРЅРѕРіРѕ
+С€Р°СЂР°. РЈРїСЂР°РІР»СЏРµС‚СЃСЏ С‚Р°РєРѕР№ СЃРµСЂРІРµСЂ С‚РѕР»СЊРєРѕ Р°РґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂРѕРј (РјРѕРґРµСЂР°С‚РѕСЂРѕРј), РґРѕСЃС‚СѓРї РїСЂРµРґРѕСЃС‚Р°РІР»СЏРµС‚СЃСЏ
+РёСЃРєР»СЋС‡РёС‚РµР»СЊРЅРѕ РїРѕ СЂР°СЃСЃС‹Р»Р°РµРјС‹Рј РїРѕР»СЊР·РѕРІР°С‚РµР»СЏРј СЃСЃС‹Р»РєР°Рј-РїСЂРёРіР»Р°С€РµРЅРёСЏРј (РёРЅРІР°Р№С‚Р°Рј).
 <br>
-Все действия вроде бы совершаются в игровой манере, но параллельно они отпечатываются
-в сознании ребенка. Подросток радуется тому, что достиг нового ранга в игре, а на самом деле
-он даже не догадывается, что может быть вовлечен в серьезное преступное сообщество.
+Р’СЃРµ РґРµР№СЃС‚РІРёСЏ РІСЂРѕРґРµ Р±С‹ СЃРѕРІРµСЂС€Р°СЋС‚СЃСЏ РІ РёРіСЂРѕРІРѕР№ РјР°РЅРµСЂРµ, РЅРѕ РїР°СЂР°Р»Р»РµР»СЊРЅРѕ РѕРЅРё РѕС‚РїРµС‡Р°С‚С‹РІР°СЋС‚СЃСЏ
+РІ СЃРѕР·РЅР°РЅРёРё СЂРµР±РµРЅРєР°. РџРѕРґСЂРѕСЃС‚РѕРє СЂР°РґСѓРµС‚СЃСЏ С‚РѕРјСѓ, С‡С‚Рѕ РґРѕСЃС‚РёРі РЅРѕРІРѕРіРѕ СЂР°РЅРіР° РІ РёРіСЂРµ, Р° РЅР° СЃР°РјРѕРј РґРµР»Рµ
+РѕРЅ РґР°Р¶Рµ РЅРµ РґРѕРіР°РґС‹РІР°РµС‚СЃСЏ, С‡С‚Рѕ РјРѕР¶РµС‚ Р±С‹С‚СЊ РІРѕРІР»РµС‡РµРЅ РІ СЃРµСЂСЊРµР·РЅРѕРµ РїСЂРµСЃС‚СѓРїРЅРѕРµ СЃРѕРѕР±С‰РµСЃС‚РІРѕ.
 <br>
-Некоторые игры используют GPS и постоянно собирают информацию о местоположении игрока.
-А это значит, что и другие участники игрового сообщества могут узнать, где находится ребенок в
-данный момент.
+РќРµРєРѕС‚РѕСЂС‹Рµ РёРіСЂС‹ РёСЃРїРѕР»СЊР·СѓСЋС‚ GPS Рё РїРѕСЃС‚РѕСЏРЅРЅРѕ СЃРѕР±РёСЂР°СЋС‚ РёРЅС„РѕСЂРјР°С†РёСЋ Рѕ РјРµСЃС‚РѕРїРѕР»РѕР¶РµРЅРёРё РёРіСЂРѕРєР°.
+Рђ СЌС‚Рѕ Р·РЅР°С‡РёС‚, С‡С‚Рѕ Рё РґСЂСѓРіРёРµ СѓС‡Р°СЃС‚РЅРёРєРё РёРіСЂРѕРІРѕРіРѕ СЃРѕРѕР±С‰РµСЃС‚РІР° РјРѕРіСѓС‚ СѓР·РЅР°С‚СЊ, РіРґРµ РЅР°С…РѕРґРёС‚СЃСЏ СЂРµР±РµРЅРѕРє РІ
+РґР°РЅРЅС‹Р№ РјРѕРјРµРЅС‚.
+
 
 </p>
 </i>	
