--- a/menu.html
+++ b/menu.html
@@ -14,21 +14,21 @@ function changeDisplay(object)
 </head>
 <body bgcolor=#ccffcc>
 <map name="AA">
-<font size=5>
+<font size=5 face="Verdana">
 <font color=#8811ff>
-<P><H2 align=center><font color=#380048>Содержание</H2></P>
+<P><H2 align=center><font color=#380048>Г‘Г®Г¤ГҐГ°Г¦Г Г­ГЁГҐ</H2></P>
 
-<P Align="Left"><a href="virusi.html" target="майн" alt="определ">Компьютерные вирусы </a>
+<P Align="Left"><a href="virusi.html" target="Г¬Г Г©Г­" alt="Г®ГЇГ°ГҐГ¤ГҐГ«">ГЉГ®Г¬ГЇГјГѕГІГҐГ°Г­Г»ГҐ ГўГЁГ°ГіГ±Г» </a>
 
-<P Align="Left"><a href="verbovka.html" target="майн"> Вербовка и отбор детей</a>
+<P Align="Left"><a href="verbovka.html" target="Г¬Г Г©Г­"> Г‚ГҐГ°ГЎГ®ГўГЄГ  ГЁ Г®ГІГЎГ®Г° Г¤ГҐГІГҐГ©</a>
 
-<P Align="Left"><a href="travlya.html" target="майн" >Травля в Интернете (кибербуллинг)</a>
+<P Align="Left"><a href="travlya.html" target="Г¬Г Г©Г­" >Г’Г°Г ГўГ«Гї Гў Г€Г­ГІГҐГ°Г­ГҐГІГҐ (ГЄГЁГЎГҐГ°ГЎГіГ«Г«ГЁГ­ГЈ)</a>
 
-<P Align="Left"><a href="dannie.html" target="майн" >Персональные данные</a>
+<P Align="Left"><a href="dannie.html" target="Г¬Г Г©Г­" >ГЏГҐГ°Г±Г®Г­Г Г«ГјГ­Г»ГҐ Г¤Г Г­Г­Г»ГҐ</a>
 
-<P Align="Left"><a href="igri.html" target="майн" >Онлайн-игры</a>
+<P Align="Left"><a href="igri.html" target="Г¬Г Г©Г­" >ГЋГ­Г«Г Г©Г­-ГЁГЈГ°Г»</a>
 
-<P Align="Left"><a href="saiti.html" target="майн" >Детские безопасные сайты</a></li>
+<P Align="Left"><a href="saiti.html" target="Г¬Г Г©Г­" >Г„ГҐГІГ±ГЄГЁГҐ ГЎГҐГ§Г®ГЇГ Г±Г­Г»ГҐ Г±Г Г©ГІГ»</a></li>
 
 
 </map>
