--- a/saiti.html
+++ b/saiti.html
@@ -2,85 +2,85 @@
 <HEAD> 
 <body bgcolor=#ccffcc>
 
-<font size=5>
+<font size=5 face="Verdana">
 <i>
-<font color=#ff0011><p align=center><b>Детские безопасные сайты</b></font></p>
-<a href="main.html" target="майн" >назад</a></i>
+<font color=#ff0011><p align=center><b>Р”РµС‚СЃРєРёРµ Р±РµР·РѕРїР°СЃРЅС‹Рµ СЃР°Р№С‚С‹</b></font></p>
+<a href="main.html" target="РјР°Р№РЅ" >РЅР°Р·Р°Рґ</a></i>
 <p align=justify>
 <br>
-http://i-deti.org/ — Портал «Безопасный инет для детей», ресурсы, рекомендации, комиксы.
+http://i-deti.org/ вЂ” РџРѕСЂС‚Р°Р» В«Р‘РµР·РѕРїР°СЃРЅС‹Р№ РёРЅРµС‚ РґР»СЏ РґРµС‚РµР№В», СЂРµСЃСѓСЂСЃС‹, СЂРµРєРѕРјРµРЅРґР°С†РёРё, РєРѕРјРёРєСЃС‹.
 
 <br>
-http://dotdeti.ru/ — Фонд «Разумный интернет», развитие в России детского интернета и поддержкой гуманитарных проектов во всемирной сети.
+http://dotdeti.ru/ вЂ” Р¤РѕРЅРґ В«Р Р°Р·СѓРјРЅС‹Р№ РёРЅС‚РµСЂРЅРµС‚В», СЂР°Р·РІРёС‚РёРµ РІ Р РѕСЃСЃРёРё РґРµС‚СЃРєРѕРіРѕ РёРЅС‚РµСЂРЅРµС‚Р° Рё РїРѕРґРґРµСЂР¶РєРѕР№ РіСѓРјР°РЅРёС‚Р°СЂРЅС‹С… РїСЂРѕРµРєС‚РѕРІ РІРѕ РІСЃРµРјРёСЂРЅРѕР№ СЃРµС‚Рё.
 <br>
 
-http://www.gogul.tv/ — Федеральная программа безопасного детского интернета «Гогуль».
+http://www.gogul.tv/ вЂ” Р¤РµРґРµСЂР°Р»СЊРЅР°СЏ РїСЂРѕРіСЂР°РјРјР° Р±РµР·РѕРїР°СЃРЅРѕРіРѕ РґРµС‚СЃРєРѕРіРѕ РёРЅС‚РµСЂРЅРµС‚Р° В«Р“РѕРіСѓР»СЊВ».
 
 <br>
-http://сетевичок.рф/ — Твой главный советчик в сети. Здесь ты можешь узнать о безопасности в сети понятным и доступным языком, а при возникновении критической ситуации обратиться за советом.
+http://СЃРµС‚РµРІРёС‡РѕРє.СЂС„/ вЂ” РўРІРѕР№ РіР»Р°РІРЅС‹Р№ СЃРѕРІРµС‚С‡РёРє РІ СЃРµС‚Рё. Р—РґРµСЃСЊ С‚С‹ РјРѕР¶РµС€СЊ СѓР·РЅР°С‚СЊ Рѕ Р±РµР·РѕРїР°СЃРЅРѕСЃС‚Рё РІ СЃРµС‚Рё РїРѕРЅСЏС‚РЅС‹Рј Рё РґРѕСЃС‚СѓРїРЅС‹Рј СЏР·С‹РєРѕРј, Р° РїСЂРё РІРѕР·РЅРёРєРЅРѕРІРµРЅРёРё РєСЂРёС‚РёС‡РµСЃРєРѕР№ СЃРёС‚СѓР°С†РёРё РѕР±СЂР°С‚РёС‚СЊСЃСЏ Р·Р° СЃРѕРІРµС‚РѕРј.
 
 <br>
-www.e-parta.ru — Информационно-познавательный портал для подростков.
+www.e-parta.ru вЂ” РРЅС„РѕСЂРјР°С†РёРѕРЅРЅРѕ-РїРѕР·РЅР°РІР°С‚РµР»СЊРЅС‹Р№ РїРѕСЂС‚Р°Р» РґР»СЏ РїРѕРґСЂРѕСЃС‚РєРѕРІ.
 <br>
 
-http://detskieradosti.ru/ — Детские радости: сайт, где родители найдут своим детям много веселых и увлекательных развлечений в онлайн режиме, а также скачают интересный материал.
+http://detskieradosti.ru/ вЂ” Р”РµС‚СЃРєРёРµ СЂР°РґРѕСЃС‚Рё: СЃР°Р№С‚, РіРґРµ СЂРѕРґРёС‚РµР»Рё РЅР°Р№РґСѓС‚ СЃРІРѕРёРј РґРµС‚СЏРј РјРЅРѕРіРѕ РІРµСЃРµР»С‹С… Рё СѓРІР»РµРєР°С‚РµР»СЊРЅС‹С… СЂР°Р·РІР»РµС‡РµРЅРёР№ РІ РѕРЅР»Р°Р№РЅ СЂРµР¶РёРјРµ, Р° С‚Р°РєР¶Рµ СЃРєР°С‡Р°СЋС‚ РёРЅС‚РµСЂРµСЃРЅС‹Р№ РјР°С‚РµСЂРёР°Р».
 <br>
 
-http://www.solnet.ee/ — Солнышко: Ежедневный познавательно-развлекательный портал для детей, родителей и педагогов.
+http://www.solnet.ee/ вЂ” РЎРѕР»РЅС‹С€РєРѕ: Р•Р¶РµРґРЅРµРІРЅС‹Р№ РїРѕР·РЅР°РІР°С‚РµР»СЊРЅРѕ-СЂР°Р·РІР»РµРєР°С‚РµР»СЊРЅС‹Р№ РїРѕСЂС‚Р°Р» РґР»СЏ РґРµС‚РµР№, СЂРѕРґРёС‚РµР»РµР№ Рё РїРµРґР°РіРѕРіРѕРІ.
 <br>
 
-http://www.leon4ik.com/ — Leon4ik: Портал для детей и родителей,воспитателей детских садов.Методическиематериалы,учебныепособия,статьи и заметки для родителей и воспитателей,мультфильмы,сказки,стихи,раскраски,обучающаялитература,авторские творения и многое другое.
+http://www.leon4ik.com/ вЂ” Leon4ik: РџРѕСЂС‚Р°Р» РґР»СЏ РґРµС‚РµР№ Рё СЂРѕРґРёС‚РµР»РµР№,РІРѕСЃРїРёС‚Р°С‚РµР»РµР№ РґРµС‚СЃРєРёС… СЃР°РґРѕРІ.РњРµС‚РѕРґРёС‡РµСЃРєРёРµРјР°С‚РµСЂРёР°Р»С‹,СѓС‡РµР±РЅС‹РµРїРѕСЃРѕР±РёСЏ,СЃС‚Р°С‚СЊРё Рё Р·Р°РјРµС‚РєРё РґР»СЏ СЂРѕРґРёС‚РµР»РµР№ Рё РІРѕСЃРїРёС‚Р°С‚РµР»РµР№,РјСѓР»СЊС‚С„РёР»СЊРјС‹,СЃРєР°Р·РєРё,СЃС‚РёС…Рё,СЂР°СЃРєСЂР°СЃРєРё,РѕР±СѓС‡Р°СЋС‰Р°СЏР»РёС‚РµСЂР°С‚СѓСЂР°,Р°РІС‚РѕСЂСЃРєРёРµ С‚РІРѕСЂРµРЅРёСЏ Рё РјРЅРѕРіРѕРµ РґСЂСѓРіРѕРµ.
 <br>
 
-http://uotika.ru/ — В гостях у Отика: Новый сайт для детей и подростков с роботом Отиком. Он специально создан чтобы отвечать на ваши вопросы, общаться с вами в режиме онлайн. Заходите к роботу Отику, скучно не будет. А то, что на сайте есть различные разделы, полезные и интересные, робот Отик держит в секрете от взрослых. А зачем об этом рассказывать, сайт ведь для детей!
+http://uotika.ru/ вЂ” Р’ РіРѕСЃС‚СЏС… Сѓ РћС‚РёРєР°: РќРѕРІС‹Р№ СЃР°Р№С‚ РґР»СЏ РґРµС‚РµР№ Рё РїРѕРґСЂРѕСЃС‚РєРѕРІ СЃ СЂРѕР±РѕС‚РѕРј РћС‚РёРєРѕРј. РћРЅ СЃРїРµС†РёР°Р»СЊРЅРѕ СЃРѕР·РґР°РЅ С‡С‚РѕР±С‹ РѕС‚РІРµС‡Р°С‚СЊ РЅР° РІР°С€Рё РІРѕРїСЂРѕСЃС‹, РѕР±С‰Р°С‚СЊСЃСЏ СЃ РІР°РјРё РІ СЂРµР¶РёРјРµ РѕРЅР»Р°Р№РЅ. Р—Р°С…РѕРґРёС‚Рµ Рє СЂРѕР±РѕС‚Сѓ РћС‚РёРєСѓ, СЃРєСѓС‡РЅРѕ РЅРµ Р±СѓРґРµС‚. Рђ С‚Рѕ, С‡С‚Рѕ РЅР° СЃР°Р№С‚Рµ РµСЃС‚СЊ СЂР°Р·Р»РёС‡РЅС‹Рµ СЂР°Р·РґРµР»С‹, РїРѕР»РµР·РЅС‹Рµ Рё РёРЅС‚РµСЂРµСЃРЅС‹Рµ, СЂРѕР±РѕС‚ РћС‚РёРє РґРµСЂР¶РёС‚ РІ СЃРµРєСЂРµС‚Рµ РѕС‚ РІР·СЂРѕСЃР»С‹С…. Рђ Р·Р°С‡РµРј РѕР± СЌС‚РѕРј СЂР°СЃСЃРєР°Р·С‹РІР°С‚СЊ, СЃР°Р№С‚ РІРµРґСЊ РґР»СЏ РґРµС‚РµР№!
 
 <br>
-http://ukrrabbit.moy.su/ — Живая планета-зоопортал.
+http://ukrrabbit.moy.su/ вЂ” Р–РёРІР°СЏ РїР»Р°РЅРµС‚Р°-Р·РѕРѕРїРѕСЂС‚Р°Р».
 <br>
 
-http://www.babylessons.ru/ — Детские развивающие игры, уроки, поделки.
+http://www.babylessons.ru/ вЂ” Р”РµС‚СЃРєРёРµ СЂР°Р·РІРёРІР°СЋС‰РёРµ РёРіСЂС‹, СѓСЂРѕРєРё, РїРѕРґРµР»РєРё.
 
 <br>
-http://baby.oxid.ru/ -Детские MP3, афиша, стихи, песенки, сказки.
+http://baby.oxid.ru/ -Р”РµС‚СЃРєРёРµ MP3, Р°С„РёС€Р°, СЃС‚РёС…Рё, РїРµСЃРµРЅРєРё, СЃРєР°Р·РєРё.
 
 <br>
-http://1001skazka.com/— Коллекция сказок.
+http://1001skazka.com/вЂ” РљРѕР»Р»РµРєС†РёСЏ СЃРєР°Р·РѕРє.
 
 <br>
-http://www.lukoshko.net/ — Лукошко сказок — Детская электронная библиотека — детские сказки, рассказы, стихи и песни. Бесплатные электронные книги для детей.
+http://www.lukoshko.net/ вЂ” Р›СѓРєРѕС€РєРѕ СЃРєР°Р·РѕРє вЂ” Р”РµС‚СЃРєР°СЏ СЌР»РµРєС‚СЂРѕРЅРЅР°СЏ Р±РёР±Р»РёРѕС‚РµРєР° вЂ” РґРµС‚СЃРєРёРµ СЃРєР°Р·РєРё, СЂР°СЃСЃРєР°Р·С‹, СЃС‚РёС…Рё Рё РїРµСЃРЅРё. Р‘РµСЃРїР»Р°С‚РЅС‹Рµ СЌР»РµРєС‚СЂРѕРЅРЅС‹Рµ РєРЅРёРіРё РґР»СЏ РґРµС‚РµР№.
 
 <br>
-http://www.deti.religiousbook.org.ua/ — Детская страничка: Детям о Вселенной, планете Земля, растениях и животных.
+http://www.deti.religiousbook.org.ua/ вЂ” Р”РµС‚СЃРєР°СЏ СЃС‚СЂР°РЅРёС‡РєР°: Р”РµС‚СЏРј Рѕ Р’СЃРµР»РµРЅРЅРѕР№, РїР»Р°РЅРµС‚Рµ Р—РµРјР»СЏ, СЂР°СЃС‚РµРЅРёСЏС… Рё Р¶РёРІРѕС‚РЅС‹С….
 
 <br>
-http://umfo.ru/ — Молодежно-развлекательный форум.
+http://umfo.ru/ вЂ” РњРѕР»РѕРґРµР¶РЅРѕ-СЂР°Р·РІР»РµРєР°С‚РµР»СЊРЅС‹Р№ С„РѕСЂСѓРј.
 
 <br>
-http://predkov.net/— Форум для детей и подростков. Игры и развлечения на форуме. Общение детей со всего света.
+http://predkov.net/вЂ” Р¤РѕСЂСѓРј РґР»СЏ РґРµС‚РµР№ Рё РїРѕРґСЂРѕСЃС‚РєРѕРІ. РРіСЂС‹ Рё СЂР°Р·РІР»РµС‡РµРЅРёСЏ РЅР° С„РѕСЂСѓРјРµ. РћР±С‰РµРЅРёРµ РґРµС‚РµР№ СЃРѕ РІСЃРµРіРѕ СЃРІРµС‚Р°.
 <br>
 
-http://detstvo.ru/ — Сайт для детей мам и пап.
+http://detstvo.ru/ вЂ” РЎР°Р№С‚ РґР»СЏ РґРµС‚РµР№ РјР°Рј Рё РїР°Рї.
 <br>
 
-http://www.igra-internet.ru/» — Онлайн интернет-игра «Изучи Интернет – управляй им».
+http://www.igra-internet.ru/В» вЂ” РћРЅР»Р°Р№РЅ РёРЅС‚РµСЂРЅРµС‚-РёРіСЂР° В«РР·СѓС‡Рё РРЅС‚РµСЂРЅРµС‚ вЂ“ СѓРїСЂР°РІР»СЏР№ РёРјВ».
 <br>
 
-http://www.safe-internet.ru/ — Сайт Ростелеком «Безопасность детей в Интернете, библиотека с материалами, памятками, рекомендациями по возрастам.
+http://www.safe-internet.ru/ вЂ” РЎР°Р№С‚ Р РѕСЃС‚РµР»РµРєРѕРј В«Р‘РµР·РѕРїР°СЃРЅРѕСЃС‚СЊ РґРµС‚РµР№ РІ РРЅС‚РµСЂРЅРµС‚Рµ, Р±РёР±Р»РёРѕС‚РµРєР° СЃ РјР°С‚РµСЂРёР°Р»Р°РјРё, РїР°РјСЏС‚РєР°РјРё, СЂРµРєРѕРјРµРЅРґР°С†РёСЏРјРё РїРѕ РІРѕР·СЂР°СЃС‚Р°Рј.
 <br>
 
-http://www.fid.su/projects/deti-v-internete — Сайт Фонда Развития Интернет.
+http://www.fid.su/projects/deti-v-internete вЂ” РЎР°Р№С‚ Р¤РѕРЅРґР° Р Р°Р·РІРёС‚РёСЏ РРЅС‚РµСЂРЅРµС‚.
 <br>
 
-http://content-filtering.ru/ — Сайт «Ваш личный интернет», советы, рекомендации для детей и родителей по безопасной работе в Интернет.
+http://content-filtering.ru/ вЂ” РЎР°Р№С‚ В«Р’Р°С€ Р»РёС‡РЅС‹Р№ РёРЅС‚РµСЂРЅРµС‚В», СЃРѕРІРµС‚С‹, СЂРµРєРѕРјРµРЅРґР°С†РёРё РґР»СЏ РґРµС‚РµР№ Рё СЂРѕРґРёС‚РµР»РµР№ РїРѕ Р±РµР·РѕРїР°СЃРЅРѕР№ СЂР°Р±РѕС‚Рµ РІ РРЅС‚РµСЂРЅРµС‚.
 <br>
 
-http://www.ligainternet.ru/ — Лига безопасного Интернета.
+http://www.ligainternet.ru/ вЂ” Р›РёРіР° Р±РµР·РѕРїР°СЃРЅРѕРіРѕ РРЅС‚РµСЂРЅРµС‚Р°.
 
 <br>
-http://www.microsoft.com/ru-ru/security/default.aspx — Сайт Центра безопасности Майкрософт.
+http://www.microsoft.com/ru-ru/security/default.aspx вЂ” РЎР°Р№С‚ Р¦РµРЅС‚СЂР° Р±РµР·РѕРїР°СЃРЅРѕСЃС‚Рё РњР°Р№РєСЂРѕСЃРѕС„С‚.
 <br>
 
-http://www.saferunet.org/children/ — Центр безопасности Интернета в России.
+http://www.saferunet.org/children/ вЂ” Р¦РµРЅС‚СЂ Р±РµР·РѕРїР°СЃРЅРѕСЃС‚Рё РРЅС‚РµСЂРЅРµС‚Р° РІ Р РѕСЃСЃРёРё.
 <br>
 </p>
 </i>	
